operator page save\edit updated
